# RAT

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  __init__.py  dataset.py  documentation.md  generation.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini  trainer.py
.github/workflows/: ci.yml
rat/: __init__.py  cli.py
rat_model/: __init__.py  attention.py  block.py  feedforward.py  rotary_embedding.py  transformer.py  utils.py
tests/: conftest.py  test_attention.py  test_dataset.py  test_feedforward.py  test_generation.py  test_performance.py  test_rat.py  test_training.py  test_transformer.py  test_utils.py
