[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rat-transformer"
version = "0.1.2"
description = "RAT: Reinforced Adaptive Transformer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["transformer", "attention", "reinforcement-learning", "nlp", "language-model", "rat"]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "datasets>=2.7.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=5.0.0",
]
training = [
    "wandb>=0.13.0",
    "tensorboard>=2.10.0",
    "accelerate>=0.16.0",
]
serving = [
    "fastapi>=0.88.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
rat-train = "rat.cli:train_command"
rat-generate = "rat.cli:generate_command"
rat-eval = "rat.cli:eval_command"
rat-test = "rat.cli:test_command"

[project.urls]
Homepage = "https://reinforcedadaptivetransformer.vercel.app/"
Repository = "https://github.com/ReinforcedAdaptiveTransformer-RAT/RAT"
Issues = "https://github.com/ReinforcedAdaptiveTransformer-RAT/RAT/issues"
Documentation = "https://github.com/ReinforcedAdaptiveTransformer-RAT/RAT#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["rat*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
rat = ["assets/*", "config/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
